--- a/src/assets/styles/carousel.css
+++ b/src/assets/styles/carousel.css
@@ -11,6 +11,7 @@
     width: 100%;
     overflow: hidden;
 }
+
 .carousel-inner::after {
     display: block;
     clear: both;
@@ -27,6 +28,7 @@
     backface-visibility: hidden;
     transition: transform 0.6s ease-in-out;
 }
+
 @media (prefers-reduced-motion: reduce) {
     .carousel-item {
         transition: none;
@@ -56,18 +58,21 @@
     transition-property: opacity;
     transform: none;
 }
+
 .carousel-fade .carousel-item.active,
 .carousel-fade .carousel-item-next.carousel-item-start,
 .carousel-fade .carousel-item-prev.carousel-item-end {
     z-index: 1;
     opacity: 1;
 }
+
 .carousel-fade .active.carousel-item-start,
 .carousel-fade .active.carousel-item-end {
     z-index: 0;
     opacity: 0;
     transition: opacity 0s 0.6s;
 }
+
 @media (prefers-reduced-motion: reduce) {
     .carousel-fade .active.carousel-item-start,
     .carousel-fade .active.carousel-item-end {
@@ -93,12 +98,14 @@
     opacity: 0.5;
     transition: opacity 0.15s ease;
 }
+
 @media (prefers-reduced-motion: reduce) {
     .carousel-control-prev,
     .carousel-control-next {
         transition: none;
     }
 }
+
 .carousel-control-prev:hover, .carousel-control-prev:focus,
 .carousel-control-next:hover,
 .carousel-control-next:focus {
@@ -145,7 +152,8 @@
 .carousel-indicators {
     position: absolute;
     right: 0;
-    bottom: 0;
+    /*bottom: 0;*/
+    top: 0;
     left: 0;
     z-index: 2;
     display: flex;
@@ -156,6 +164,7 @@
     margin-left: 15%;
     list-style: none;
 }
+
 .carousel-indicators [data-bs-target] {
     box-sizing: content-box;
     flex: 0 1 auto;
@@ -174,11 +183,13 @@
     opacity: 0.5;
     transition: opacity 0.6s ease;
 }
+
 @media (prefers-reduced-motion: reduce) {
     .carousel-indicators [data-bs-target] {
         transition: none;
     }
 }
+
 .carousel-indicators .active {
     opacity: 1;
 }
@@ -198,12 +209,19 @@
 .carousel-dark .carousel-control-next-icon {
     filter: invert(1) grayscale(100);
 }
+
+.carousel-control-prev, .carousel-control-next {
+    display: none;
+}
+
 .carousel-dark .carousel-indicators [data-bs-target] {
     background-color: #000;
 }
+
 .carousel-dark .carousel-caption {
     color: #000;
 }
+
 .visually-hidden {
     display: none;
 }
