--- a/src/assets/styles/carousel.css
+++ b/src/assets/styles/carousel.css
@@ -152,8 +152,8 @@
 .carousel-indicators {
     position: absolute;
     right: 0;
-    /*bottom: 0;*/
-    top: 0;
+    bottom: 0;
+    /*top: 0;*/
     left: 0;
     z-index: 2;
     display: flex;
